02. Add api-gw and eureka server microservices

--- a/inventoryService/src/main/resources/application.properties
+++ b/inventoryService/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=inventoryService
+#server.port=8083
+#Para habilitar puertos aleatorios, usado cuando existen multiples instancias del microservicio
+server.port=0
 
-server.port=8083
+#Eureka client
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
