--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,14 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2023.0.3</spring-cloud.version>
 	</properties>
 	<modules>
 		<module>productService</module>
 		<module>inventoryService</module>
 		<module>orderService</module>
+		<module>apiGateway</module>
+		<module>discoveryServer</module>
 	</modules>
 	<dependencies>
 <!--		<dependency>
@@ -57,4 +60,15 @@
 		</plugins>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
