--- a/apiGateway/src/main/resources/application.properties
+++ b/apiGateway/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=apiGateway
 server.port=8080
 
 #Eureka client
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://eureka:password@localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Inventory service routes
@@ -25,6 +26,31 @@ spring.cloud.gateway.routes[2].id=products-service
 spring.cloud.gateway.routes[2].uri=lb://productService
 #spring.cloud.gateway.routes[2].uri=http://localhost:8081
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/product/**
+
+#Discovery Server routes
+spring.cloud.gateway.routes[3].id=discovery-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[3].filters[0]=SetPath=/
+
+#Discovery Server Static routes
+spring.cloud.gateway.routes[4].id=discovery-service-static
+spring.cloud.gateway.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+
+spring.cloud.gateway.default-filters[0]=SaveSession
+spring.cloud.gateway.default-filters[1]=TokenRelay
+
+#Keycloak
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8181/realms/microservices-realm
+
+spring.security.oauth2.client.registration.keycloak.provider=keycloak
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.registration.keycloak.client-id=microservices_client
+spring.security.oauth2.client.registration.keycloak.client-secret=qvv1VWwRFVyrNr40YAdFJNlG7EvLHj2g
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/keycloak
 
 #Log
 logging.level.root=info
