--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,41 @@ services:
       - 5432:5432
     expose:
       - 5432
+
+  ### Postgres database for Keycloak
+  db-keycloak:
+    container_name: db-keycloak
+    image: postgres:15.5-alpine
+    #restart: unless-stopped
+    environment:
+      POSTGRES_DB: db_keycloak
+      POSTGRES_USER: kcadmin
+      POSTGRES_PASSWORD: docker123
+    command: -p 5433
+    ports:
+      - 5433:5433
+    expose:
+      - 5433
+
+  ### Keycloak
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:21.0.2
+    command: ["start-dev"]
+    ports:
+      - 8181:8181
+    expose:
+      - 8181
+    depends_on:
+      - db-keycloak
+    environment:
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://db-keycloak:5433/db_keycloak
+      KC_DB_SCHEMA: public
+      KC_DB_USERNAME: kcadmin
+      KC_DB_PASSWORD: docker123
+      #KC_DB_URL_HOST: db-keycloak
+      #KC_DB_URL_DATABASE: db_keycloak
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin1234
+      KC_HTTP_PORT: 8181
