--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -3,12 +3,16 @@ spring.application.name=productService
 #Para habilitar puertos aleatorios, usado cuando existen multiples instancias del microservicio
 server.port=0
 
-#Eureka client
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_products
 spring.datasource.username=products_admin
 spring.datasource.password=docker123
+
+#Eureka client
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://eureka:password@localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#Keycloak
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8181/realms/microservices-realm/protocol/openid-connect/certs
