--- a/apiGateway/src/main/resources/application.properties
+++ b/apiGateway/src/main/resources/application.properties
@@ -38,13 +38,28 @@ spring.cloud.gateway.routes[4].id=discovery-service-static
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
+#Actuator routes
+#Inventory actuator routes
+spring.cloud.gateway.routes[5].id=inventory-service-actuator
+spring.cloud.gateway.routes[5].uri=lb://inventoryService/actuator/inventory/**
+spring.cloud.gateway.routes[5].predicates[0]=Path=/actuator/inventory/**
+
+#Orders actuator routes
+spring.cloud.gateway.routes[6].id=orders-service-actuator
+spring.cloud.gateway.routes[6].uri=lb://orderService/actuator/orders/**
+spring.cloud.gateway.routes[6].predicates[0]=Path=/actuator/orders/**
+
+#Products actuator routes
+spring.cloud.gateway.routes[7].id=products-service-actuator
+spring.cloud.gateway.routes[7].uri=lb://productService/actuator/products/**
+spring.cloud.gateway.routes[7].predicates[0]=Path=/actuator/products/**
+
+
 spring.cloud.gateway.default-filters[0]=SaveSession
 spring.cloud.gateway.default-filters[1]=TokenRelay
 
 #Keycloak
-
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8181/realms/microservices-realm
-
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
 spring.security.oauth2.client.registration.keycloak.scope=openid
 spring.security.oauth2.client.registration.keycloak.client-id=microservices_client
@@ -56,3 +71,7 @@ spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway=trace
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=info
+
+#Actuator
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoints.web.base-path=/actuator
