--- a/discoveryServer/src/main/resources/application.properties
+++ b/discoveryServer/src/main/resources/application.properties
@@ -13,3 +13,7 @@ logging.level.org.springframework.security=debug
 
 spring.security.user.name=eureka
 spring.security.user.password=password
+
+#Actuator
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoints.web.base-path=/actuator/discovery
