04. Add notification module and configure kafka

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>orderService</module>
 		<module>apiGateway</module>
 		<module>discoveryServer</module>
+		<module>notificationService</module>
 	</modules>
 	<dependencies>
 <!--		<dependency>
