--- a/apiGateway/src/main/resources/application.properties
+++ b/apiGateway/src/main/resources/application.properties
@@ -54,6 +54,10 @@ spring.cloud.gateway.routes[7].id=products-service-actuator
 spring.cloud.gateway.routes[7].uri=lb://productService/actuator/products/**
 spring.cloud.gateway.routes[7].predicates[0]=Path=/actuator/products/**
 
+#Discovery actuator routes
+spring.cloud.gateway.routes[8].id=discovery-service-actuator
+spring.cloud.gateway.routes[8].uri=http://localhost:8761/actuator/discovery/**
+spring.cloud.gateway.routes[8].predicates[0]=Path=/actuator/discovery/**
 
 spring.cloud.gateway.default-filters[0]=SaveSession
 spring.cloud.gateway.default-filters[1]=TokenRelay
@@ -75,3 +79,10 @@ logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocato
 #Actuator
 management.endpoints.web.exposure.include=health,prometheus
 management.endpoints.web.base-path=/actuator
+
+#Tracing
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+#valor entre 0.1 (10%) y 1.0 (100%)
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level= %5p [${spring.application.name}, %X{traceId:-}, %X{spanId:-}]
