--- a/discoveryServer/src/main/resources/application.properties
+++ b/discoveryServer/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.security.user.password=password
 #Actuator
 management.endpoints.web.exposure.include=health,prometheus
 management.endpoints.web.base-path=/actuator/discovery
+
+#Tracing
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+#valor entre 0.1 (10%) y 1.0 (100%)
+management.tracing.sampling.probability=1.0
+
+logging.level.root=debug
+logging.pattern.level= %5p [${spring.application.name}, %X{traceId:-}, %X{spanId:-}]
